[package]
name = "acr-mirror-kube-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.85.0"
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
futures = "0.3.28"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
